# micromdsyntax

./: LICENSE  README.md  main.py  pyproject.toml
utils/: utils.py
yamlfiles/: markdownsyntaxhighlight.yaml
