[project]
name = "micromdsyntax"
version = "0.1.0"
description = "This is a project that generates a markdown syntax file for Micro, that ensures syntax highlighting in the markdown code blocks. "
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.12",
]
